fix preload css for correct ui

--- a/src/_sass/_bulma_postload.scss
+++ b/src/_sass/_bulma_postload.scss
@@ -22,10 +22,10 @@
 
 
 
-@import 'bulma/grid/all';
+// @import 'bulma/grid/all';
 // @import "bulma/grid/columns.sass";
 @import "bulma/grid/tiles.sass";
 
-@import 'bulma/base/all';
-@import "bulma/elements/content.sass";
+// @import 'bulma/base/all';
+// @import "bulma/elements/content.sass";
 
