--- a/src/_sass/_bulma_preload.scss
+++ b/src/_sass/_bulma_preload.scss
@@ -1,8 +1,9 @@
 @charset "utf-8";
 
 @import 'bulma/utilities/all';
+@import 'bulma/base/all';
 @import "bulma/grid/columns.sass";
 @import "bulma/layout/section.sass";
 @import "bulma/layout/footer.sass";
 @import "bulma/elements/container.sass";
-
+@import "bulma/elements/content.sass";
