--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -11,6 +11,7 @@
 
           </div>
           <div class="column has-text-right has-text-centered-mobile">
+              <span class="is-size-5 menu-link{% if page.url == '/' %} active{% endif %}"><a href="/">about</a></span>
               {% assign pages_list = site.pages %}
               {% for node in pages_list %}
                 {% if node.title != null %}
@@ -22,6 +23,8 @@
               <!-- <span class="menu-link"><a href="/about" >about</a></span>
               <span class="menu-link"><a href="/project" >project</a></span>
               <span class="menu-link"><a href="/" >blog</a></span> -->
+              
+              <span class="is-size-5 menu-link{% if page.url == 'blog/index.html' %} active{% endif %}"><a href="/blog">blog</a></span>
               <span class="menu-link is-size-6"><a href="/search"><i class="fas fa-search 2x"></i></a></span>
           </div>
           <!-- <div class="column"><a href="#"><i class="fas fa-search"></i></a></div> -->
