--- a/src/public/css/preload_styles.scss
+++ b/src/public/css/preload_styles.scss
@@ -12,9 +12,7 @@
 
 // first page
 
-.recent-posts{
-  background-color: #333; 
-  height:20rem; 
+.image-cover{
   padding:0rem;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -22,6 +20,22 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+}
+
+.image-load-placeholder{
+  // https://ce8be7dec.cloudimg.io/width/80/fgaussian2/https://www.dropbox.com/s/3qn79g1jnrhat0h/2018-08-13-%E0%B8%A3%E0%B8%B9%E0%B9%89%E0%B8%88%E0%B8%B1%E0%B8%81%E0%B8%81%E0%B8%B1%E0%B8%9A%E0%B8%90%E0%B8%B2%E0%B8%99%E0%B8%82%E0%B9%89%E0%B8%AD%E0%B8%A1%E0%B8%B9%E0%B8%A5%E0%B8%AD%E0%B8%99%E0%B8%B8%E0%B8%81%E0%B8%A3%E0%B8%A1%E0%B9%80%E0%B8%A7%E0%B8%A5%E0%B8%B2%20OpenTSDB%20%E0%B8%81%E0%B8%B1%E0%B8%99%E0%B9%80%E0%B8%96%E0%B8%AD%E0%B8%B0-cover2.jpeg?raw=1
+  padding:0rem;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.recent-posts{
+  background-color: #333; 
+  padding:0rem;
 }
 
 .recent-posts-overlay{
