--- a/src/public/css/preload_styles.scss
+++ b/src/public/css/preload_styles.scss
@@ -5,6 +5,35 @@
 @import 'bulma_preload';
 {% include css/pace-theme-minimal.css %}
 
+
+.placeholder {
+  background-color: #f6f6f6;
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: relative;
+  overflow: hidden;
+}
+
+.placeholder img {
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  left: 0;
+  width: 100%;
+  transition: opacity 1s linear;
+}
+
+.placeholder img.loaded {
+  opacity: 1;
+}
+
+.placeholder-img-small {
+  filter: blur(20px);
+  /* this is needed so Safari keeps sharp edges */
+  transform: scale(1);
+}
+
+
 // header
 .hr-header{
   margin-top: 0rem;
