add nextjs wrapper

--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -35,17 +35,17 @@
 
   <!-- CSS -->
   <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous"> -->
-  <!-- <link rel="stylesheet" href="{{ site.baseurl }}/public/css/forms-min.css"> -->
-  <!-- <link rel="stylesheet" href="{{ site.baseurl }}/public/css/styles.css"> -->
+  <!-- <link rel="stylesheet" href="{{ site.baseurl }}/static/css/forms-min.css"> -->
+  <!-- <link rel="stylesheet" href="{{ site.baseurl }}/static/css/styles.css"> -->
 
   <style>
       {% include css/preload_styles.css %}
     </style>
 
-  <!-- <link rel="preload" href="{{ site.baseurl }}/public/css/styles.css" as="style"> -->
-  <link rel="preload" href="{{ site.baseurl }}/public/css/styles.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <!-- <link rel="preload" href="{{ site.baseurl }}/static/css/styles.css" as="style"> -->
+  <link rel="preload" href="{{ site.baseurl }}/static/css/styles.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript>
-    <link rel="stylesheet" href="{{ site.baseurl }}/public/css/styles.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/static/css/styles.css">
   </noscript>
   <script type="text/javascript">
     {% include js/loadCSS.min.js %}
@@ -55,20 +55,20 @@
   </script>
   <script>
     (function () {
-      loadCSS("{{ site.baseurl }}/public/css/styles.css");
+      loadCSS("{{ site.baseurl }}/static/css/styles.css");
     })();
   </script>
 
   <!-- Icons -->
-  <!-- <link rel="shortcut icon" href="{{ site.baseurl }}/public/favicon.ico"> -->
-  <link rel="icon" href="{{ site.baseurl }}/public/favicon.png">
+  <!-- <link rel="shortcut icon" href="{{ site.baseurl }}/static/favicon.ico"> -->
+  <link rel="icon" href="{{ site.baseurl }}/static/favicon.png">
 
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/feed.xml">
 
   
-  <!-- <link rel="stylesheet" href="{{ site.baseurl }}/public/css/pace-theme-flash.css">
-  <script type="text/javascript" src="{{ site.baseurl }}/public/js/pace.min.js"></script> -->
+  <!-- <link rel="stylesheet" href="{{ site.baseurl }}/static/css/pace-theme-flash.css">
+  <script type="text/javascript" src="{{ site.baseurl }}/static/js/pace.min.js"></script> -->
 
   <!--  Google Analytics Script-->
   <script>
