--- a/src/_includes/tail.html
+++ b/src/_includes/tail.html
@@ -7,7 +7,7 @@
         console.log(e.detail.instance);
     }, false);
 </script>
-<script async type="text/javascript" src="{{ site.baseurl }}/public/js/lazyload.min.js"></script>
+<script async type="text/javascript" src="{{ site.baseurl }}/static/js/lazyload.min.js"></script>
 
 <script>
         // <pre>
