--- a/src/public/css/preload_styles.scss
+++ b/src/public/css/preload_styles.scss
@@ -6,12 +6,14 @@
 {% include css/pace-theme-minimal.css %}
 
 
+
 .placeholder {
   background-color: #f6f6f6;
   background-size: cover;
   background-repeat: no-repeat;
   position: relative;
   overflow: hidden;
+  margin: 1.2rem;
 }
 
 .placeholder img {
