--- a/src/public/css/styles.scss
+++ b/src/public/css/styles.scss
@@ -8,6 +8,11 @@
 {% include css/font-awesome-all-5.2.0.css %}
 {% include css/forms-min.css %}
 
+.content li {
+  margin: 0.7rem;
+}
+
+$is-size-5: 1.15rem;
 
 .card{
   margin:1rem;
