remove non-used css for reducing web size

--- a/src/_sass/_bulma_preload.scss
+++ b/src/_sass/_bulma_preload.scss
@@ -7,3 +7,6 @@
 @import "bulma/layout/footer.sass";
 @import "bulma/elements/container.sass";
 @import "bulma/elements/content.sass";
+@import "bulma/components/card";
+
+@import "bulma/elements/tag.sass";
