--- a/src/_sass/_bulma_postload.scss
+++ b/src/_sass/_bulma_postload.scss
@@ -1,22 +1,34 @@
-@import 'bulma/utilities/all';
-@import 'bulma/components/all';
+// @import 'bulma/utilities/all';
+// @import 'bulma/components/all';
 
-@import "bulma/elements/box.sass";
-@import "bulma/elements/button.sass";
+// @import "breadcrumb.sass"
+// @import "dropdown.sass"
+// @import "level.sass"
+// @import "media.sass"
+// @import "menu.sass"
+// @import "message.sass"
+// @import "modal.sass"
+// @import "navbar.sass"
+// @import "pagination.sass"
+// @import "panel.sass"
+// @import "tabs.sass"
+
+// @import "bulma/elements/box.sass";
+// @import "bulma/elements/button.sass";
 // @import "bulma/elements/container.sass";
 // @import "bulma/elements/content.sass";
-@import "bulma/elements/form.sass";
-@import "bulma/elements/icon.sass";
-@import "bulma/elements/image.sass";
-@import "bulma/elements/notification.sass";
-@import "bulma/elements/progress.sass";
-@import "bulma/elements/table.sass";
-@import "bulma/elements/tag.sass";
-@import "bulma/elements/title.sass";
-@import "bulma/elements/other.sass";
+// @import "bulma/elements/form.sass";
+// @import "bulma/elements/icon.sass";
+// @import "bulma/elements/image.sass";
+// @import "bulma/elements/notification.sass";
+// @import "bulma/elements/progress.sass";
+// @import "bulma/elements/table.sass";
+
+// @import "bulma/elements/title.sass";
+// @import "bulma/elements/other.sass";
 
 // @import 'bulma/layout/all';
-@import "bulma/layout/hero.sass";
+// @import "bulma/layout/hero.sass";
 // @import "bulma/layout/section.sass";
 // @import "bulma/layout/footer.sass";
 
@@ -24,7 +36,7 @@
 
 // @import 'bulma/grid/all';
 // @import "bulma/grid/columns.sass";
-@import "bulma/grid/tiles.sass";
+// @import "bulma/grid/tiles.sass";
 
 // @import 'bulma/base/all';
 // @import "bulma/elements/content.sass";
