--- a/src/public/css/styles.scss
+++ b/src/public/css/styles.scss
@@ -7,3 +7,5 @@
 {% include css/Trirong.css %}
 {% include css/font-awesome-all-5.2.0.css %}
 {% include css/forms-min.css %}
+{% include css/syntax/monokai.css %}
+
