--- a/src/public/css/preload_styles.scss
+++ b/src/public/css/preload_styles.scss
@@ -5,6 +5,9 @@
 @import 'bulma_preload';
 {% include css/pace-theme-minimal.css %}
 
+.image{
+  margin: 2rem 0;
+}
 
 .placeholder {
   background-color: #f6f6f6;
@@ -12,7 +15,7 @@
   background-repeat: no-repeat;
   position: relative;
   overflow: hidden;
-  margin: 1.2rem;
+
 }
 
 .placeholder img {
