change header font to Prompt

--- a/src/_sass/_bulma_preload.scss
+++ b/src/_sass/_bulma_preload.scss
@@ -9,4 +9,4 @@
 @import "bulma/elements/content.sass";
 @import "bulma/components/card";
 
-@import "bulma/elements/tag.sass";
+// @import "bulma/elements/tag.sass";
