--- a/src/public/css/preload_styles.scss
+++ b/src/public/css/preload_styles.scss
@@ -2,8 +2,28 @@
 ---
 
 // Import Sass Bulma.io CSS Framework
+$content-heading-line-height: 1.3; 
+
 @import 'bulma_preload';
 {% include css/pace-theme-minimal.css %}
+
+h1,h2,h3, .title, .logo{
+    font-family: 'Prompt', sans-serif;
+    font-weight: 200;
+    // font-family: 'supermarket', Helvetica, Arial, sans-serif;
+}
+
+.logo a{
+  color:  #0D47A1;
+}
+
+// Tag
+
+.tag {
+  margin: 0 0.2rem;
+}
+
+// placeholder image
 
 .image{
   margin: 2rem 0;
@@ -205,16 +225,6 @@ $is-size-5: 1.15rem;
 
 .card-content{
   padding: 0.7rem;
-}
-
-h1,h2,h3, .title, .logo{
-    font-family: 'Trirong', sans-serif;
-    font-weight: 600;
-    // font-family: 'supermarket', Helvetica, Arial, sans-serif;
-}
-
-.logo a{
-  color:  #0D47A1;
 }
 
 .box{
