--- a/src/public/css/styles.scss
+++ b/src/public/css/styles.scss
@@ -4,7 +4,7 @@
 // Import Sass Bulma.io CSS Framework
 @import 'bulma_postload';
 
-{% include css/Trirong.css %}
+{% include css/Prompt.css %}
 {% include css/font-awesome-all-5.2.0.css %}
 {% include css/forms-min.css %}
 {% include css/syntax/monokai.css %}
