--- a/src/public/css/preload_styles.scss
+++ b/src/public/css/preload_styles.scss
@@ -1,6 +1,22 @@
 ---
 ---
 
+@mixin word-wrap() {
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  -ms-word-break: break-all;
+  word-break: break-all;
+  word-break: break-word;
+  -ms-hyphens: auto;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  hyphens: auto;
+}
+
+.word-wrap {
+  @include word-wrap();
+}
+
 // Import Sass Bulma.io CSS Framework
 $content-heading-line-height: 1.3; 
 
@@ -15,10 +31,59 @@ h1,h2,h3, .title, .logo{
 .title{
   font-weight: bolder;
 }
+.post-list a, .title a {
+  color: #333;
+}
+
+.post-list{
+  @include word-wrap();
+}
+
+.post-list a:hover, .title a:hover {
+  color: $blue;
+}
+
 
 .logo a{
   color:  #0D47A1;
 }
+
+.wrapper{
+  display: flex;
+  width: 100%;
+}
+
+.description{
+  margin: 0.25rem 0 0 0; 
+  color: #999;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+
+  @media (max-width: $tablet) {  
+    width: 500px;
+  }
+
+  @media (min-width: $tablet) and (max-width: $desktop) {  
+    width: 500px;
+  }
+
+  @media (min-width: $desktop) and (max-width: $fullhd) {  
+    width: 500px;
+   }
+
+   @media (min-width: $fullhd)  {  
+    width: 700px;
+   }
+
+}
+
+// .description{
+//   color: #999;
+//   white-space: nowrap;
+//   overflow: hidden;
+//   text-overflow: ellipsis;
+// }
 
 // Tag
 .tag a{
@@ -31,7 +96,7 @@ h1,h2,h3, .title, .logo{
 }
 
 .tag {
-  margin: 0 0.2rem;
+  margin: 0 0.4rem 0 0;
 }
 
 // placeholder image
@@ -135,21 +200,7 @@ h1,h2,h3, .title, .logo{
   margin: 8px;
 }
 
-@mixin word-wrap() {
-    overflow-wrap: break-word;
-    word-wrap: break-word;
-    -ms-word-break: break-all;
-    word-break: break-all;
-    word-break: break-word;
-    -ms-hyphens: auto;
-    -moz-hyphens: auto;
-    -webkit-hyphens: auto;
-    hyphens: auto;
-  }
 
-.word-wrap {
-    @include word-wrap();
-}
 
 * {
     box-sizing: border-box;
@@ -173,21 +224,6 @@ body {
   }
 
 
-.subtitle{
-  color: $grey-light;
-}
-
-.subtitle .description{
-  font-size: 2pt;
-}
-
-.post-list a, .title a {
-  color: $grey-dark;
-}
-
-.post-list a:hover, .title a:hover {
-  color: $blue;
-}
 
 // header
 .menu-link a{
