undo preload pace.js

--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -54,15 +54,14 @@
   </noscript>
   <script type="text/javascript">
     {% include js/loadCSS.min.js %}
-  </script>
-  <script type="text/javascript">
-    {% include js/pace.min.js %}
-  </script>
+  </script> 
+  <script async type="text/javascript" src="{{ site.baseurl }}/public/js/pace.min.js"></script>
   <script>
     (function () {
-      loadCSS("{{ site.baseurl }}/public/css/styles.css");
+        loadCSS("{{ site.baseurl }}/public/css/styles.css");
     })();
   </script>
+  
 
   <!-- Icons -->
   <!-- <link rel="shortcut icon" href="{{ site.baseurl }}/public/favicon.ico"> -->
