--- a/src/_layouts/post.html
+++ b/src/_layouts/post.html
@@ -6,7 +6,7 @@ layout: default
   <div class="post">
     <h1 class="post-title ">{{ page.title }}</h1>
     <i class="icon far fa-calendar"></i><span class="post-date" itemprop="datePublished" content="{{ page.date | date: "%Y-%m-%d" }}">{{ page.date | date: "%Y, %b %e" }}</span>
-    <i class="icon fa fa-tags"></i><span class="entry-tags">
+    <i class="icon fa fa-tags"></i><span class="tags">
       {% for tag in page.tags %}
         <span class="tag is-light"><a href="{{ site.url }}{{ site.baseurl }}/tags/#{{ tag | cgi_escape }}" title="Pages tagged {{ tag }}" rel="tag">{{ tag }}</a></span>
         {% comment %} {% unless forloop.last %} {% endunless %} {% endcomment %}
