--- a/src/_layouts/showcase.html
+++ b/src/_layouts/showcase.html
@@ -6,7 +6,7 @@ layout: default
   <div class="post">
     <h1 itemprop="name" class="post-title">{{ page.title }}</h1>
     <i class="icon fa fa-calendar-o"></i><span class="post-date" itemprop="datePublished" content="{{ page.date | date: "%Y-%m-%d" }}">{{ page.date | date_to_string }}</span>
-    <i class="icon fa fa-tags"></i><p class="entry-tags">{% for tag in page.tags %}<span class="label"><a href="{{ site.url }}/tags/#{{ tag | cgi_escape }}" title="Pages tagged {{ tag }}" rel="tag">{{ tag }}</a></span>{% unless forloop.last %} {% endunless %}{% endfor %}</p>
+    <i class="icon fa fa-tags"></i><p class="tags">{% for tag in page.tags %}<span class="label"><a href="{{ site.url }}/tags/#{{ tag | cgi_escape }}" title="Pages tagged {{ tag }}" rel="tag">{{ tag }}</a></span>{% unless forloop.last %} {% endunless %}{% endfor %}</p>
 <!--    {% if page.comments %}<p><a href="{{ site.url }}{{ page.url }}#disqus_thread">Comments</a></p>{% endif %}-->
     <!-- <p>{{ page.description }}</p> -->
     {% if page.image != null %}<img alt="{{page.title}}" src="{{ site.baseurl }}/{{ page.image }}">{% endif %}
