--- a/src/public/css/preload_styles.scss
+++ b/src/public/css/preload_styles.scss
@@ -23,7 +23,6 @@ $content-heading-line-height: 1.3;
 $is-size-4: 1.4rem;
 
 @import 'bulma_preload';
-{% include css/pace-theme-minimal.css %}
 
 h1,h2,h3, .title, .logo,
 .content h1, .content h2, .content h3, .content h4, .content h5, .content h6
@@ -85,21 +84,27 @@ code{
   }
 }
 
+
+
 @media (min-width: 0) and (max-width: $tablet) { 
 .modal {
-  display: none;
+  // display: none;
   height: 100%;
   left: 0;
   position: fixed;
   top: 0;
   width: 100%;
-    // open
-    display: flex;
-    flex-direction: column;
+  // open  
+  display: flex;
+  flex-direction: column;
 
   &__header, &__content, &__footer{
     background-color: #fff;
     padding: 0 1rem;
+  }
+
+  &__header{
+    padding-top: 0.5rem;
   }
 
   &__content{
