load fontawesome from cdn instead

--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -58,6 +58,9 @@
   <script>
     (function () {
         loadCSS("{{ site.baseurl }}/public/css/styles.css");
+        loadCSS("https://use.fontawesome.com/releases/v5.3.1/css/solid.css");
+        loadCSS("https://use.fontawesome.com/releases/v5.3.1/css/brands.css");
+        loadCSS("https://use.fontawesome.com/releases/v5.3.1/css/fontawesome.css");
     })();
   </script>
   
