change header link to button

--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -11,20 +11,20 @@
 
           </div>
           <div class="column has-text-right has-text-centered-mobile">
-              <span class="is-size-5 menu-link{% if page.url == '/' %} active{% endif %}"><a href="/">home</a></span>
+              <span class="is-size-5 menu-link{% if page.url == '/' %} active{% endif %}"><a class="button is-white" href="/">home</a></span>
               {% assign pages_list = site.pages %}
               {% for node in pages_list %}
                 {% if node.title != null %}
                   {% if node.add_menu != null %}
-                    <span class="is-size-5 menu-link{% if page.url == node.url %} active{% endif %}"><a href="{{ site.baseurl }}{{ node.url }}">{{ node.title }}</a></span>
+                    <span class="is-size-5 menu-link{% if page.url == node.url %} active{% endif %}"><a class="button is-white" href="{{ site.baseurl }}{{ node.url }}">{{ node.title }}</a></span>
                   {% endif %}
                 {% endif %}
               {% endfor %}
               <!-- <span class="menu-link"><a href="/about" >about</a></span>
               <span class="menu-link"><a href="/project" >project</a></span>
               <span class="menu-link"><a href="/" >blog</a></span> -->
-              <span class="is-size-5 menu-link{% if page.url contains 'blog' %} active{% endif %}"><a href="/blog/">blog</a></span>
-              <span class="menu-link is-size-6"><a href="/search/"><i class="fas fa-search 2x"></i></a></span>
+              <span class="is-size-5 menu-link{% if page.url contains 'blog' %} active{% endif %}"><a  class="button is-white" href="/blog/">blog</a></span>
+              <span class="menu-link is-size-6"><a class="button is-white" href="/search/"><i class="fas fa-search 2x"></i></a></span>
           </div>
           <!-- <div class="column"><a href="#"><i class="fas fa-search"></i></a></div> -->
 
