--- a/src/_sass/_bulma_preload.scss
+++ b/src/_sass/_bulma_preload.scss
@@ -7,4 +7,5 @@
 @import "bulma/layout/footer.sass";
 @import "bulma/elements/container.sass";
 @import "bulma/elements/content.sass";
+@import "bulma/elements/button.sass";
 @import "bulma/components/card";
