add tag page to menu, tag cloud

--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -23,6 +23,7 @@
               <!-- <span class="menu-link"><a href="/about" >about</a></span>
               <span class="menu-link"><a href="/project" >project</a></span>
               <span class="menu-link"><a href="/" >blog</a></span> -->
+              <span class="is-size-5 menu-link{% if page.url contains 'tags' %} active{% endif %}"><a  class="button is-white" href="/tags/">tag</a></span>
               <span class="is-size-5 menu-link{% if page.url contains 'blog' %} active{% endif %}"><a  class="button is-white" href="/blog/">blog</a></span>
               <span class="menu-link is-size-6"><a class="button is-white" href="/search/"><i class="fas fa-search 2x"></i></a></span>
           </div>
