--- a/src/_includes/user_info.html
+++ b/src/_includes/user_info.html
@@ -2,7 +2,7 @@
     <a class="user-link" href="https://github.com/mildronize"><i class="fab fa-github"></i></a>
     <a class="user-link" href="https://twitter.com/mildronize"><i class="fab fa-twitter"></i></a>
     <a class="user-link" href="https://www.linkedin.com/in/thada-wangthammang-281894a6"><i class="fab fa-linkedin"></i></a>
-    <a class="user-link" href="mailto:mildronize@gmail.com"><i class="fas fa-envelope"></i></a>
+    <a class="user-link" href="mailto:thada.w@psu.ac.th"><i class="fas fa-envelope"></i></a>
     <a class="user-link" href="https://medium.com/@mildronize"><i class="fab fa-medium"></i></a>
     <a class="user-link" href="{{ site.baseurl}}/feed.xml"><i class="fas fa-rss"></i></a>
 </div>
