fix typography and content

--- a/src/_layouts/post.html
+++ b/src/_layouts/post.html
@@ -2,52 +2,65 @@
 layout: default
 ---
 
-<article itemscope itemtype="http://schema.org/Article">
-  <div class="post">
-    <h1 class="post-title ">{{ page.title }}</h1>
-    <i class="icon far fa-calendar"></i><span class="post-date" itemprop="datePublished" content="{{ page.date | date: "%Y-%m-%d" }}">{{ page.date | date: "%Y, %b %e" }}</span>
-    <i class="icon fa fa-tags"></i><span class="tags">
-      {% for tag in page.tags %}
-        <span class="tag is-light"><a href="{{ site.url }}{{ site.baseurl }}/tags/#{{ tag | cgi_escape }}" title="Pages tagged {{ tag }}" rel="tag">{{ tag }}</a></span>
-        {% comment %} {% unless forloop.last %} {% endunless %} {% endcomment %}
-      {% endfor %}
-      </span>
-    <!-- {% if site.comment and page.comment == null %}<p><a href="{{site.baseurl}}{{page.url}}#disqus_thread">Comments</a></p>{% endif %} -->
-    {% if page.toc == true %}
-      <div id="toc"></div>
+
+<div class="columns">
+  <div class="column is-8-desktop is-offset-2-desktop is-8-tablet is-offset-2-tablet">
+    <div class="content is-size-6 is-size-5-fullhd">
+
+      <!-- Article -->
+      <article itemscope itemtype="http://schema.org/Article">
+        <div class="post">
+          <h1 class="post-title ">{{ page.title }}</h1>
+          <i class="icon far fa-calendar"></i><span class="post-date" itemprop="datePublished"
+            content="{{ page.date | date: "%Y-%m-%d" }}">{{ page.date | date: "%Y, %b %e" }}</span>
+          <i class="icon fa fa-tags"></i><span class="tags">
+            {% for tag in page.tags %}
+            <span class="tag is-light"><a href="{{ site.url }}{{ site.baseurl }}/tags/#{{ tag | cgi_escape }}"
+                title="Pages tagged {{ tag }}" rel="tag">{{ tag }}</a></span>
+            {% comment %} {% unless forloop.last %} {% endunless %} {% endcomment %}
+            {% endfor %}
+          </span>
+          <!-- {% if site.comment and page.comment == null %}<p><a href="{{site.baseurl}}{{page.url}}#disqus_thread">Comments</a></p>{% endif %} -->
+          {% if page.toc == true %}
+          <div id="toc"></div>
+          <hr>
+          {% endif %}
+          <div style="margin:1.5rem;"></div>
+          {{ content }}
+          <!--    {% if page.comments %}<div id="disqus_thread"></div>{% endif %}-->
+        </div>
+      </article>
       <hr>
-    {% endif %}
-    <div style="margin:1.5rem;"></div>
-    {{ content }}
-<!--    {% if page.comments %}<div id="disqus_thread"></div>{% endif %}-->
-  </div>
-</article>
-<hr>
-<div class="related">
-  <h3>Related Posts</h3>
-  <ul class="related-posts">
-    {% for post in site.related_posts limit:5 %}
-      <li>
-          <a href="{{ site.baseurl }}{{ post.url }}">
-            {{ post.title }}
-            <small>{{ post.date | date_to_string }}</small>
-          </a>
-      </li>
-    {% endfor %}
-  </ul>
-</div>
+      <div class="related">
+        <h3>Related Posts</h3>
+        <ul class="related-posts">
+          {% for post in site.related_posts limit:5 %}
+          <li>
+            <a href="{{ site.baseurl }}{{ post.url }}">
+              {{ post.title }}
+              <small>{{ post.date | date_to_string }}</small>
+            </a>
+          </li>
+          {% endfor %}
+        </ul>
+      </div>
 
-{% if site.comment and page.comment == null %}
-  <hr>
-    {% include disqus.html %}
-    <!-- {% include disqus_comment_count.html %} -->
-{% endif %}
+      {% if site.comment and page.comment == null %}
+      <hr>
+      {% include disqus.html %}
+      <!-- {% include disqus_comment_count.html %} -->
+      {% endif %}
 
-{% if page.toc == true %}
-    <script type="text/javascript" src="{{ site.baseurl }}/public/js/toc.js"></script>
-    <script type="text/javascript">
-        $(document).ready(function() {
-            $('#toc').toc({title: "<h2>Contents</h2>", showSpeed: 0, listType: 'ul'});
+      {% if page.toc == true %}
+      <script type="text/javascript" src="{{ site.baseurl }}/public/js/toc.js"></script>
+      <script type="text/javascript">
+        $(document).ready(function () {
+          $('#toc').toc({ title: "<h2>Contents</h2>", showSpeed: 0, listType: 'ul' });
         });
-    </script>
-{% endif %}
+      </script>
+      {% endif %}
+
+
+    </div>
+  </div>
+</div>
