--- a/src/public/css/styles.scss
+++ b/src/public/css/styles.scss
@@ -6,4 +6,4 @@
 
 {% include css/Prompt.css %}
 {% include css/forms-min.css %}
-{% include css/syntax/monokai.css %}
+{% include css/syntax/manni.css %}
