--- a/src/public/css/preload_styles.scss
+++ b/src/public/css/preload_styles.scss
@@ -37,18 +37,37 @@ h1,h2,h3, .title, .logo
 }
 
 .content {
-  // scale 1.25
+  
   h1, h2, h3, h4, h5, h6{
     font-family: 'Prompt', sans-serif;
     font-weight: 500;
   }
 
+  h1.post-title{
+    line-height: 1.1;
+    font-weight: 600;
+  }
+
+  // scale 1.25
   h1{ font-size: 3.05rem; }
   h2{ font-size: 2.441rem; }
   h3{ font-size: 1.953rem; }
   h4{ font-size: 1.563rem; }
   h5{ font-size: 1.25rem; }
   h6{ font-size: 1rem; }
+
+  @media (min-width: 0) and (max-width: $tablet) { 
+    // scale 1.125
+    h1{ font-size: 1.602rem; }
+    h2{ font-size: 1.424rem; }
+    h3{ font-size: 1.266rem; }
+    h4{ font-size: 1.125rem; }
+    h5{ font-size: 1.25rem; }
+
+    h1.post-title{
+      font-size: 1.602rem;
+    }
+  }
 
   h2:not(:first-child){
     margin-top: 2em;
@@ -62,21 +81,18 @@ h1,h2,h3, .title, .logo
   }
   .post-date, .tags{ margin: 0 1rem; }
 
-  h1.post-title{
-    font-size: 2.5em;
-    line-height: 1.1;
-    font-weight: 600;
-    // margin-top: 1.333em;
-  }
-
   p:not(:last-child){
-      margin: 1em 0;
+      margin: 1.667em 0;
   }
 
-  ol li p:not(:last-child) {
-    margin: 0.67em;
+  ol, ul{
+    li p:not(:last-child) {
+      margin: 0.67em;
+    }
   }
+    
 }
+
 
 .post-list a, .title a {
   color: #111;
