fix container, typography

--- a/src/_layouts/page.html
+++ b/src/_layouts/page.html
@@ -2,12 +2,11 @@
 layout: default
 ---
 
-<div class="columns">
-  <div class="column is-10-desktop is-offset-1-desktop is-8-tablet is-offset-2-tablet">
-    <div class="content is-size-6 is-size-5-fullhd">
+<div class="page-container">
+
+    <div class="content">
       <div class="page">
         {{ content }}
       </div>
     </div>
-  </div>
 </div>
