--- a/src/_sass/_bulma_preload.scss
+++ b/src/_sass/_bulma_preload.scss
@@ -5,7 +5,7 @@
 @import "bulma/grid/columns.sass";
 @import "bulma/layout/section.sass";
 @import "bulma/layout/footer.sass";
-@import "bulma/elements/container.sass";
+// @import "bulma/elements/container.sass";
 @import "bulma/elements/content.sass";
 @import "bulma/elements/button.sass";
 @import "bulma/components/card";
