--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -1,6 +1,5 @@
-<div class="container">
-    <div class="columns">
-      <div class="column is-10-desktop is-offset-1-desktop is-8-tablet is-offset-2-tablet">
+<div class="page-container">
+
         <div class="columns">
           <div class="column is-2">
             <div class="logo is-size-3 has-text-centered-mobile is-size-4-mobile">
@@ -30,7 +29,6 @@
 
         </div>
         <hr class="hr-header">
-      </div>
-    </div>
+
   </div>
 
