--- a/src/public/css/preload_styles.scss
+++ b/src/public/css/preload_styles.scss
@@ -23,6 +23,19 @@ $content-heading-line-height: 1.3;
 $is-size-4: 1.4rem;
 
 @import 'bulma_preload';
+body{
+  color: #000;
+}
+
+.post-container{
+  margin: 0 auto;
+  max-width: 42rem;
+}
+
+.page-container{
+  margin: 0 auto;
+  max-width: 60rem;
+}
 
 h1,h2,h3, .title, .logo
 {
@@ -40,23 +53,47 @@ h1,h2,h3, .title, .logo
   
   h1, h2, h3, h4, h5, h6{
     font-family: 'Prompt', sans-serif;
-    font-weight: 500;
+    font-weight: 600;
   }
 
   h1.post-title{
     line-height: 1.1;
     font-weight: 600;
+    margin-bottom: 0.33em;
   }
 
   // scale 1.25
-  h1{ font-size: 3.05rem; }
-  h2{ font-size: 2.441rem; }
-  h3{ font-size: 1.953rem; }
-  h4{ font-size: 1.563rem; }
-  h5{ font-size: 1.25rem; }
-  h6{ font-size: 1rem; }
+  // h1{ font-size: 3.05rem; }
+  // h2{ font-size: 2.441rem; }
+  // h3{ font-size: 1.953rem; }
+  // h4{ font-size: 1.563rem; }
+  // h5{ font-size: 1.25rem; }
+  // h6{ font-size: 1rem; }
+  // scale 1.20
+  h1{ font-size: 2.074rem; }
+  h2{ font-size: 1.728rem; }
+  h3{ font-size: 1.266rem; }
+  h4{ font-size: 1.44rem; }
+  h5{ font-size: 1.20rem; }
+
+  blockquote{
+    padding: 1.25em 1.5em;
+    border-left: 5px solid #000;
+  }
+
+  .highlighter-rouge .highlight{
+    margin-bottom: 1em;
+  }
 
   @media (min-width: 0) and (max-width: $tablet) { 
+
+    blockquote{
+      margin-left: -1em;
+    }
+    .highlighter-rouge .highlight{
+      margin-left: -0.5em;
+      margin-right: -0.5em;
+    }
     // scale 1.125
     h1{ font-size: 1.602rem; }
     h2{ font-size: 1.424rem; }
@@ -79,10 +116,23 @@ h1,h2,h3, .title, .logo
       line-height: 2rem;
     }
   }
-  .post-date, .tags{ margin: 0 1rem; }
+
+  .post-date {
+    color: #666;
+    font-size:1.1rem;
+  }
+  // .tags{ }
+  .tag{
+    margin: 0.3rem 0.2rem; background-color: #eee; padding: 0.4em 0.6em;
+    border-radius: 3px;
+  }
+
+  .tag a{
+    color: #444;
+  }
 
   p:not(:last-child){
-      margin: 1.667em 0;
+      margin-bottom: 0.8335em 0;
   }
 
   ol, ul{
@@ -93,12 +143,15 @@ h1,h2,h3, .title, .logo
     
 }
 
+code{
+  color:#333;
+}
 
-.post-list a, .title a {
+.post-list a, a .title {
   color: #111;
 }
 
-.post-list a:hover, .title a:hover {
+.post-list a:hover, a:hover .title  {
   color: $blue;
 }
 
@@ -309,7 +362,7 @@ h1,h2,h3, .title, .logo
 
 // recents posts
 .recent-posts-2{
-  padding:0rem;
+  padding:0em;
   min-width: 250px;
 }
 
